--- a/package.json
+++ b/package.json
@@ -8,10 +8,17 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
-    "bootstrap": "^5.0.0-beta3",
+    "bootstrap": "^5.0.0",
+    "carousel": "0.0.3",
     "mdb-ui-kit": "^3.5.0",
+    "npm-update": "^2.1.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.5.2",
+    "react-bootstrap-carousel": "^4.1.1",
     "react-dom": "^17.0.2",
+    "react-player": "^2.9.0",
+    "react-rating-stars-component": "^2.2.0",
+    "react-responsive-carousel": "^3.2.18",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.1"
