--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.0",
+    "bootstrap-icons": "^1.5.0",
     "carousel": "0.0.3",
     "mdb-ui-kit": "^3.5.0",
     "npm-update": "^2.1.0",
@@ -16,7 +17,9 @@
     "react-bootstrap": "^1.5.2",
     "react-bootstrap-carousel": "^4.1.1",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
     "react-player": "^2.9.0",
+    "react-rating": "^2.0.5",
     "react-rating-stars-component": "^2.2.0",
     "react-responsive-carousel": "^3.2.18",
     "react-router-dom": "^5.2.0",
