--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-bootstrap-carousel": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-paginate": "^7.1.2",
     "react-player": "^2.9.0",
     "react-rating": "^2.0.5",
     "react-rating-stars-component": "^2.2.0",
