--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "bootstrap": "^5.0.0",
     "bootstrap-icons": "^1.5.0",
     "carousel": "0.0.3",
+    "jquery": "^3.6.0",
     "mdb-ui-kit": "^3.5.0",
     "npm-update": "^2.1.0",
+    "popper": "^1.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-bootstrap-carousel": "^4.1.1",
