--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^5.0.0",
     "bootstrap-icons": "^1.5.0",
+    "bootstrap-modal-js": "^2.0.0-beta3",
     "carousel": "0.0.3",
     "jquery": "^3.6.0",
     "mdb-ui-kit": "^3.5.0",
