--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-bootstrap-carousel": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-loader-spinner": "^4.0.0",
     "react-paginate": "^7.1.2",
     "react-player": "^2.9.0",
     "react-rating": "^2.0.5",
