--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap-icons": "^1.5.0",
     "bootstrap-modal-js": "^2.0.0-beta3",
     "carousel": "0.0.3",
+    "dotenv": "^8.2.0",
     "jquery": "^3.6.0",
     "mdb-ui-kit": "^3.5.0",
     "npm-update": "^2.1.0",
